# creditcardhoroscope

./: .gitignore  README.md  docker-compose.yaml
api/: .env.example  Dockerfile  README.md  go.mod  go.sum  main.go
api/internal/config/: config.go
api/internal/database/: connect.go  migrations.go
api/internal/horoscopes/: cache.go  horoscopes.go
api/internal/middleware/: body_size.go  cors.go  get_ip.go  ip_whitelist.go  json_header.go  middleware.go  rate_limiting.go
api/internal/server/: 404.go  get_horoscope.go  handlers.go  health.go  horoscopes.go  payment-intents.go  payment_intents.go  rate_horoscope.go  root.go  server.go  share_horoscope.go  webhooks_stripe.go
api/internal/types/: payment_intents.go
api/internal/webhooks/: stripe_ips.go
apirust/: .dockerignore  .env.example  Cargo.toml  Dockerfile
apirust/src/: app_state.rs  config.rs  database.rs  main.rs  routes.rs
apirust/src/config/: get_config.rs
apirust/src/database/: migrations.rs
apirust/src/routes/: health.rs  root.rs
apirust/src/utils/: rate_limiter.rs
web/: .env.example  Dockerfile  package-lock.json  package.json
web/app/: app.css  root.tsx  routes.ts
web/app/components/: CheckoutForm.tsx  Disclaimer.tsx  FindOutButton.tsx  Footer.tsx  GetHoroscope.tsx  Header.tsx  PiError.tsx  Spinner.tsx
web/app/hooks/: addRating.ts  createPaymentIntent.ts  generateHoroscope.ts  shareHoroscope.ts
web/app/routes/: home.tsx  horoscope.tsx  privacy-policy.tsx  terms-of-service.tsx
web/app/types/: mutationResults.ts
web/app/welcome/: welcome.tsx
(+8 files in other folders)
