[package]
name = "apirust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
governor = "0.10.4"
serde_json = "1.0.149"
sqlx = "0.8.6"
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
indexing_slicing = "forbid"
unwrap_used = "warn"
unwrap_in_result = "warn"
unreachable = "warn"
